# gwswex

./: .editorconfig  .gitignore  .zenodo.json  Containerfile  LICENSE  README.md  gwswex.code-workspace  meson.build  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: computational-performance-benchmarking.md  model-arch.md  model-physics.md  sensitivity-analysis-from-comparison.md  todo.md
examples/demo-explicit/: demo-explicit.nc  demo-explicit.py
examples/demo-implicit/: demo-implicit.nc  demo-implicit.py
examples/gwswex-vs-hydrus1d/: _compare_helpers.py  comparison-basic-clay.ipynb  comparison-basic-loam-clay.ipynb  comparison-basic-loam.ipynb  comparison-basic-sand-clay.ipynb  comparison-basic-sand-loam.ipynb  comparison-basic-sand.ipynb  comparison-intensive-clay.ipynb  comparison-intensive-loam-clay.ipynb  comparison-intensive-loam.ipynb  comparison-intensive-sand-clay.ipynb  comparison-intensive-sand-loam.ipynb  comparison-intensive-sand.ipynb  experiment_definitions.json
examples/gwswex-vs-hydrus1d/computational-performance-benchmark/: .gitignore  README.md  analyse.py  benchmark_common.py  run_gwswex.py  run_hydrus.py  system_info.py
examples/gwswex-vs-hydrus1d/computational-performance-benchmark/results/: summary_table.md
examples/gwswex-vs-hydrus1d/sensitivity-analysis/: README.md  apply_oat_optima.py  fill_sensitivity_tables.py  gen_variants.py  oat_harness.py  oat_results.reference.json  oat_worker.py  tuned_params.reference.json  update_companion_doc.py  update_experiment_definitions.py  update_manuscript.py  validate_all.py
examples/gwswex-vs-hydrus1d/sensitivity-analysis/oat_results/: .gitignore  oat_results.json  tuned_params.json  validation_summary.md
gwswex/: __init__.py  config.py  coupler.py  io.py  model.py  version.py  wrapper.f90
gwswex/src/: kernel.f08  kernel_bmi.f08
gwswex/src/explicit/: processes.f08  solver.f08  timestep.f08
gwswex/src/implicit/: solver.f08
gwswex/src/shared/: constants.f08  geometry.f08  lateral.f08  mass_balance.f08  physics.f08  types.f08
scripts/: clean.py  dev-container.sh  get_version.py
tests/: test_api.py  test_kernel.py  test_omp.py  test_physics.py
